force-app/main/default/objects/Asset/fields/LTV_Multiple__c.field-meta.xml
<CustomField>
    <fullName>LTV_Multiple__c</fullName>
    <label>LTV倍率</label>
    <description>予測LTV / 納入価額。1台の設備が初期売価の何倍のリターンを生むかを示す指標</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>