force-app/main/default/objects/Asset/fields/Projected_LTV__c.field-meta.xml
<CustomField>
    <fullName>Projected_LTV__c</fullName>
    <label>予測LTV</label>
    <description>実績LTV + 予定マイルストーンの予定金額合計 + Equipment_Alert 由来の想定商談機会合計</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>