force-app/main/default/objects/Asset/fields/Realized_LTV__c.field-meta.xml
<CustomField>
    <fullName>Realized_LTV__c</fullName>
    <label>実績LTV</label>
    <description>納入価額 + 実施済マイルストーンの実績金額合計</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>